--- a/Week 1 html/style.css
+++ b/Week 1 html/style.css
@@ -6,24 +6,23 @@ body {
 figure {
     border: 2px solid #dc5202;
     padding: 10px;
-    width: 220px;
+    width: 625px;
     background: #f0f8ff;
 }
 
 details {
     background: #c50606;
     padding: 10px;
-    border-left: 5px solid #05fcce;
     margin: 20px 0;
 }
 
 progress {
     width: 200px;
     height: 20px;
-    accent-color: #5805bd
+    accent-color: #07ed31
 }
 
 mark {
     background: rgb(12, 222, 58);
-    color: black;
+    color: rgb(255, 247, 0);
 }
