--- a/Week 2 html/portfolio.css
+++ b/Week 2 html/portfolio.css
@@ -15,7 +15,11 @@ body {
 }
 
 header {
-    background: var(--primary-color);
+    background-image: url('https://media.discordapp.net/attachments/974857296561709059/1426729491627249664/att.j9aBGr_RsnExyoxbQS2q4DgjfejB_0is-XT8h7U4lYc.jpg?ex=68ec48e2&is=68eaf762&hm=4b956d5ed3d11d2a72837ecbce82ac3e5ca0c4a210a992d9fc3ffe1cd775c7f8&=&format=webp&width=968&height=987');
+    background-size: cover;
+    background-position: center; 
+    background-repeat: no-repeat;
+    color: white;
     margin: 0;
     text-align: center;
     padding: 1.5em 1em;
@@ -46,6 +50,11 @@ header nav a:hover {
 .hero {
     padding: 2em;
     background: var(--secondary-color);
+}
+
+.hero img {
+    width: 50%;
+    border-radius: 8px;
 }
 
 .about-container {
@@ -86,7 +95,11 @@ header nav a:hover {
 /* Contact Form */
 .contact {
     padding: 2em;
-    background: teal;
+    background-image: url('https://media.discordapp.net/attachments/974857296561709059/1425644288129368176/IMG_8909.jpg?ex=68eba1f5&is=68ea5075&hm=8de8cdccc7e85ca253cfc92bdcb23d5b2f611ffd8ca122a7787328e1487602b3&=&format=webp&width=1107&height=831') ;
+    background-size: cover;
+    background-position: center; 
+    background-repeat: no-repeat;
+    color: white;
 }
 
 form {
